# poetry-lib-monorepo-issue

./: main.py  pyproject.toml
